# ytb_dual_subtitles

./: .env  .env.example  .gitignore  API_EXAMPLES.md  FRONTEND_API_MIGRATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  pyrightconfig.json  start_backend.py  关注视频列表.md
frontend/: debug-connection-status.html  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: apiIntegration.test.ts
frontend/src/components/ApiExample/: index.tsx
frontend/src/components/Button/: index.module.css  index.tsx
frontend/src/components/ConnectionStatus/: index.module.css  index.tsx
frontend/src/components/Header/: index.module.css  index.tsx
frontend/src/components/Input/: index.module.css  index.tsx
frontend/src/components/Layout/: index.module.css  index.tsx
frontend/src/components/Loading/: index.module.css  index.tsx
frontend/src/components/Modal/: index.module.css  index.tsx
frontend/src/components/ToastContainer/: index.module.css  index.tsx
frontend/src/container/: index.ts
frontend/src/container/ComponentDemoPage/: index.module.css  index.tsx
frontend/src/container/DownloadPage/: index.module.css  index.tsx
frontend/src/container/DownloadPage/components/: index.ts
frontend/src/container/DownloadPage/components/DownloadForm/: index.module.css  index.tsx
frontend/src/container/DownloadPage/components/ProgressCard/: index.module.css  index.tsx
frontend/src/container/NotFoundPage/: index.module.css  index.tsx
frontend/src/container/PlayerDemo/: index.module.css  index.tsx
frontend/src/container/PlayerPage/: index.module.css  index.tsx
frontend/src/container/PlayerPage/components/: index.ts
frontend/src/container/VideoListPage/: index.module.css  index.tsx
frontend/src/container/VideoListPage/components/: index.ts
frontend/src/contexts/: AppContext.tsx  DownloadContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/hooks/: useApi.ts  useApiWithToast.ts  useCommunication.ts  useKeyboardShortcuts.ts  useUnifiedApi.ts  useWebSocket.ts
frontend/src/pages/: ComponentDemoPage.tsx  DownloadPage.tsx  NotFoundPage.tsx  PlayerDemo.tsx  PlayerPage.tsx  VideoListPage.tsx
frontend/src/services/: api.ts  communication.ts  websocket.ts
frontend/src/styles/: globals.css  responsive.css  variables.css
frontend/src/types/: api.ts  apiResponse.ts  common.ts  video.ts
frontend/src/utils/: apiErrorHandler.ts  constants.ts  formatters.ts  validators.ts
src/ytb_dual_subtitles/: __init__.py  __main__.py
src/ytb_dual_subtitles/api/: __init__.py  app.py
src/ytb_dual_subtitles/api/routes/: categories.py  downloads.py  files.py  player.py
src/ytb_dual_subtitles/config/: config_manager.py  config_service.py  init_config.py
src/ytb_dual_subtitles/core/: __init__.py  database.py  download_manager.py  error_handling.py  player.py  settings.py  subtitle_generator.py
src/ytb_dual_subtitles/database/: admin.py  models.py  task_dao.py
src/ytb_dual_subtitles/exceptions/: __init__.py  config_errors.py  download_errors.py  file_errors.py  subtitle_errors.py
src/ytb_dual_subtitles/models/: __init__.py  category.py  response.py  video.py
src/ytb_dual_subtitles/services/: __init__.py  file_service.py  metadata_service.py  storage_management.py  storage_service.py  subtitle_data_service.py  subtitle_service.py  subtitle_service.py.backup  translation_service.py  youtube_service.py
src/ytb_dual_subtitles/tasks/: __init__.py  file_sync_task.py
src/ytb_dual_subtitles/utils/: file_utils.py  subtitle_utils.py
src/ytb_dual_subtitles/web/: __init__.py  websocket.py
(+20 files in other folders)
